// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup Basic Rendering multiple items render correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-checkboxgroup-wrapper"
      >
        <div
          class="om-react-ui-checkboxgroup-inner ckbg-md"
        >
          <label
            for="Cheese"
          >
            <div
              class="om-react-ui-checkboxgroup-inner-checkbox p-checkbox p-component"
              data-p-highlight="false"
              data-pc-name="checkbox"
              data-pc-section="root"
            >
              <input
                aria-invalid="false"
                class="p-checkbox-input"
                data-pc-section="input"
                id="Cheese"
                name="C"
                type="checkbox"
              />
              <div
                class="p-checkbox-box"
                data-p-highlight="false"
                data-pc-section="box"
              />
            </div>
            Cheese
          </label>
        </div>
        <div
          class="om-react-ui-checkboxgroup-inner ckbg-md"
        >
          <label
            for="Mushroom"
          >
            <div
              class="om-react-ui-checkboxgroup-inner-checkbox p-checkbox p-component p-highlight"
              data-p-highlight="true"
              data-pc-name="checkbox"
              data-pc-section="root"
            >
              <input
                aria-invalid="false"
                checked=""
                class="p-checkbox-input"
                data-pc-section="input"
                id="Mushroom"
                name="M"
                type="checkbox"
              />
              <div
                class="p-checkbox-box"
                data-p-highlight="true"
                data-pc-section="box"
              >
                <i
                  class="pi pi-check"
                />
              </div>
            </div>
            Mushroom
          </label>
        </div>
        <div
          class="om-react-ui-checkboxgroup-inner ckbg-md"
        >
          <label
            for="Pepper"
          >
            <div
              class="om-react-ui-checkboxgroup-inner-checkbox p-checkbox p-component"
              data-p-highlight="false"
              data-pc-name="checkbox"
              data-pc-section="root"
            >
              <input
                aria-invalid="false"
                class="p-checkbox-input"
                data-pc-section="input"
                id="Pepper"
                name="P"
                type="checkbox"
              />
              <div
                class="p-checkbox-box"
                data-p-highlight="false"
                data-pc-section="box"
              />
            </div>
            Pepper
          </label>
        </div>
        <div
          class="om-react-ui-checkboxgroup-inner ckbg-md"
        >
          <label
            for="Onion"
          >
            <div
              class="om-react-ui-checkboxgroup-inner-checkbox p-checkbox p-component"
              data-p-highlight="false"
              data-pc-name="checkbox"
              data-pc-section="root"
            >
              <input
                aria-invalid="false"
                class="p-checkbox-input"
                data-pc-section="input"
                id="Onion"
                name="O"
                type="checkbox"
              />
              <div
                class="p-checkbox-box"
                data-p-highlight="false"
                data-pc-section="box"
              />
            </div>
            Onion
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-checkboxgroup-wrapper"
    >
      <div
        class="om-react-ui-checkboxgroup-inner ckbg-md"
      >
        <label
          for="Cheese"
        >
          <div
            class="om-react-ui-checkboxgroup-inner-checkbox p-checkbox p-component"
            data-p-highlight="false"
            data-pc-name="checkbox"
            data-pc-section="root"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              id="Cheese"
              name="C"
              type="checkbox"
            />
            <div
              class="p-checkbox-box"
              data-p-highlight="false"
              data-pc-section="box"
            />
          </div>
          Cheese
        </label>
      </div>
      <div
        class="om-react-ui-checkboxgroup-inner ckbg-md"
      >
        <label
          for="Mushroom"
        >
          <div
            class="om-react-ui-checkboxgroup-inner-checkbox p-checkbox p-component p-highlight"
            data-p-highlight="true"
            data-pc-name="checkbox"
            data-pc-section="root"
          >
            <input
              aria-invalid="false"
              checked=""
              class="p-checkbox-input"
              data-pc-section="input"
              id="Mushroom"
              name="M"
              type="checkbox"
            />
            <div
              class="p-checkbox-box"
              data-p-highlight="true"
              data-pc-section="box"
            >
              <i
                class="pi pi-check"
              />
            </div>
          </div>
          Mushroom
        </label>
      </div>
      <div
        class="om-react-ui-checkboxgroup-inner ckbg-md"
      >
        <label
          for="Pepper"
        >
          <div
            class="om-react-ui-checkboxgroup-inner-checkbox p-checkbox p-component"
            data-p-highlight="false"
            data-pc-name="checkbox"
            data-pc-section="root"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              id="Pepper"
              name="P"
              type="checkbox"
            />
            <div
              class="p-checkbox-box"
              data-p-highlight="false"
              data-pc-section="box"
            />
          </div>
          Pepper
        </label>
      </div>
      <div
        class="om-react-ui-checkboxgroup-inner ckbg-md"
      >
        <label
          for="Onion"
        >
          <div
            class="om-react-ui-checkboxgroup-inner-checkbox p-checkbox p-component"
            data-p-highlight="false"
            data-pc-name="checkbox"
            data-pc-section="root"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              id="Onion"
              name="O"
              type="checkbox"
            />
            <div
              class="p-checkbox-box"
              data-p-highlight="false"
              data-pc-section="box"
            />
          </div>
          Onion
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxGroup Basic Rendering single item renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-checkboxgroup-wrapper"
      >
        <div
          class="om-react-ui-checkboxgroup-inner ckbg-md"
        >
          <label
            for="Agree"
          >
            <div
              class="om-react-ui-checkboxgroup-inner-checkbox p-checkbox p-component p-highlight"
              data-p-highlight="true"
              data-pc-name="checkbox"
              data-pc-section="root"
            >
              <input
                aria-invalid="false"
                class="p-checkbox-input"
                data-pc-section="input"
                id="Agree"
                name="Agree"
                type="checkbox"
              />
              <div
                class="p-checkbox-box"
                data-p-highlight="true"
                data-pc-section="box"
              >
                <i
                  class="pi pi-check"
                />
              </div>
            </div>
            I am over 18 years old and I have read, understand and agree to the
            <a
              href="https://github.com/1Money-Co"
            >
              1Money Terms of Use
            </a>
            , 
            <a
              href="https://github.com/1Money-Co"
            >
              Privacy Policy
            </a>
            .
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-checkboxgroup-wrapper"
    >
      <div
        class="om-react-ui-checkboxgroup-inner ckbg-md"
      >
        <label
          for="Agree"
        >
          <div
            class="om-react-ui-checkboxgroup-inner-checkbox p-checkbox p-component p-highlight"
            data-p-highlight="true"
            data-pc-name="checkbox"
            data-pc-section="root"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              id="Agree"
              name="Agree"
              type="checkbox"
            />
            <div
              class="p-checkbox-box"
              data-p-highlight="true"
              data-pc-section="box"
            >
              <i
                class="pi pi-check"
              />
            </div>
          </div>
          I am over 18 years old and I have read, understand and agree to the
          <a
            href="https://github.com/1Money-Co"
          >
            1Money Terms of Use
          </a>
          , 
          <a
            href="https://github.com/1Money-Co"
          >
            Privacy Policy
          </a>
          .
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxGroup Disabled State disabled items render correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-checkboxgroup-wrapper"
      >
        <div
          class="om-react-ui-checkboxgroup-inner ckbg-md"
        >
          <label
            for="disabled"
          >
            <div
              class="om-react-ui-checkboxgroup-inner-checkbox p-tristatecheckbox p-checkbox p-component p-disabled"
              data-p-disabled="true"
              data-pc-name="tristatecheckbox"
              data-pc-section="root"
              id="disabled"
              inputid="disabled"
              name="disabled"
            >
              <input
                aria-invalid="false"
                class="p-checkbox-input"
                data-pc-section="input"
                disabled=""
                id="disabled"
                type="checkbox"
              />
              <span
                aria-live="polite"
                class="p-hidden-accessible"
                data-pc-section="sronlyaria"
              >
                Not Selected
              </span>
              <div
                aria-checked="false"
                class="p-checkbox-box"
                data-pc-section="box"
                id="disabled_box"
                role="checkbox"
                tabindex="-1"
              />
            </div>
            <span>
              disabled
            </span>
          </label>
        </div>
        <div
          class="om-react-ui-checkboxgroup-inner ckbg-md"
        >
          <label
            for="Achecked"
          >
            <div
              class="om-react-ui-checkboxgroup-inner-checkbox p-tristatecheckbox p-checkbox p-component p-highlight p-disabled"
              data-p-disabled="true"
              data-pc-name="tristatecheckbox"
              data-pc-section="root"
              id="Achecked"
              inputid="Achecked"
              name="Achecked"
            >
              <input
                aria-invalid="false"
                class="p-checkbox-input"
                data-pc-section="input"
                disabled=""
                id="Achecked"
                type="checkbox"
                value="true"
              />
              <span
                aria-live="polite"
                class="p-hidden-accessible"
                data-pc-section="sronlyaria"
              >
                True
              </span>
              <div
                aria-checked="true"
                class="p-checkbox-box"
                data-pc-section="box"
                id="Achecked_box"
                role="checkbox"
                tabindex="-1"
              >
                <i
                  class="pi pi-check"
                />
              </div>
            </div>
            <span>
              checked
            </span>
          </label>
        </div>
        <div
          class="om-react-ui-checkboxgroup-inner ckbg-md"
        >
          <label
            for="BnotChecked"
          >
            <div
              class="om-react-ui-checkboxgroup-inner-checkbox p-tristatecheckbox p-checkbox p-component p-highlight p-disabled"
              data-p-disabled="true"
              data-pc-name="tristatecheckbox"
              data-pc-section="root"
              id="BnotChecked"
              inputid="BnotChecked"
              name="BnotChecked"
            >
              <input
                aria-invalid="false"
                class="p-checkbox-input"
                data-pc-section="input"
                disabled=""
                id="BnotChecked"
                type="checkbox"
                value="false"
              />
              <span
                aria-live="polite"
                class="p-hidden-accessible"
                data-pc-section="sronlyaria"
              >
                False
              </span>
              <div
                aria-checked="false"
                class="p-checkbox-box"
                data-pc-section="box"
                id="BnotChecked_box"
                role="checkbox"
                tabindex="-1"
              >
                <i
                  class="pi pi-minus"
                />
              </div>
            </div>
            <span>
              Not checked
            </span>
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-checkboxgroup-wrapper"
    >
      <div
        class="om-react-ui-checkboxgroup-inner ckbg-md"
      >
        <label
          for="disabled"
        >
          <div
            class="om-react-ui-checkboxgroup-inner-checkbox p-tristatecheckbox p-checkbox p-component p-disabled"
            data-p-disabled="true"
            data-pc-name="tristatecheckbox"
            data-pc-section="root"
            id="disabled"
            inputid="disabled"
            name="disabled"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              disabled=""
              id="disabled"
              type="checkbox"
            />
            <span
              aria-live="polite"
              class="p-hidden-accessible"
              data-pc-section="sronlyaria"
            >
              Not Selected
            </span>
            <div
              aria-checked="false"
              class="p-checkbox-box"
              data-pc-section="box"
              id="disabled_box"
              role="checkbox"
              tabindex="-1"
            />
          </div>
          <span>
            disabled
          </span>
        </label>
      </div>
      <div
        class="om-react-ui-checkboxgroup-inner ckbg-md"
      >
        <label
          for="Achecked"
        >
          <div
            class="om-react-ui-checkboxgroup-inner-checkbox p-tristatecheckbox p-checkbox p-component p-highlight p-disabled"
            data-p-disabled="true"
            data-pc-name="tristatecheckbox"
            data-pc-section="root"
            id="Achecked"
            inputid="Achecked"
            name="Achecked"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              disabled=""
              id="Achecked"
              type="checkbox"
              value="true"
            />
            <span
              aria-live="polite"
              class="p-hidden-accessible"
              data-pc-section="sronlyaria"
            >
              True
            </span>
            <div
              aria-checked="true"
              class="p-checkbox-box"
              data-pc-section="box"
              id="Achecked_box"
              role="checkbox"
              tabindex="-1"
            >
              <i
                class="pi pi-check"
              />
            </div>
          </div>
          <span>
            checked
          </span>
        </label>
      </div>
      <div
        class="om-react-ui-checkboxgroup-inner ckbg-md"
      >
        <label
          for="BnotChecked"
        >
          <div
            class="om-react-ui-checkboxgroup-inner-checkbox p-tristatecheckbox p-checkbox p-component p-highlight p-disabled"
            data-p-disabled="true"
            data-pc-name="tristatecheckbox"
            data-pc-section="root"
            id="BnotChecked"
            inputid="BnotChecked"
            name="BnotChecked"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              disabled=""
              id="BnotChecked"
              type="checkbox"
              value="false"
            />
            <span
              aria-live="polite"
              class="p-hidden-accessible"
              data-pc-section="sronlyaria"
            >
              False
            </span>
            <div
              aria-checked="false"
              class="p-checkbox-box"
              data-pc-section="box"
              id="BnotChecked_box"
              role="checkbox"
              tabindex="-1"
            >
              <i
                class="pi pi-minus"
              />
            </div>
          </div>
          <span>
            Not checked
          </span>
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxGroup Invalid State invalid items render correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-checkboxgroup-wrapper"
      >
        <div
          class="om-react-ui-checkboxgroup-inner ckbg-md"
        >
          <label
            for="invalid"
          >
            <div
              class="om-react-ui-checkboxgroup-inner-checkbox p-tristatecheckbox p-checkbox p-component p-invalid"
              data-pc-name="tristatecheckbox"
              data-pc-section="root"
              id="invalid"
              inputid="invalid"
              name="invalid"
            >
              <input
                aria-invalid="true"
                class="p-checkbox-input"
                data-pc-section="input"
                id="invalid"
                type="checkbox"
              />
              <span
                aria-live="polite"
                class="p-hidden-accessible"
                data-pc-section="sronlyaria"
              >
                Not Selected
              </span>
              <div
                aria-checked="false"
                class="p-checkbox-box"
                data-pc-section="box"
                id="invalid_box"
                role="checkbox"
                tabindex="0"
              />
            </div>
            <span>
              invalid
            </span>
          </label>
        </div>
        <div
          class="om-react-ui-checkboxgroup-inner ckbg-md"
        >
          <label
            for="checked"
          >
            <div
              class="om-react-ui-checkboxgroup-inner-checkbox p-tristatecheckbox p-checkbox p-component p-highlight p-invalid"
              data-pc-name="tristatecheckbox"
              data-pc-section="root"
              id="checked"
              inputid="checked"
              name="checked"
            >
              <input
                aria-invalid="true"
                class="p-checkbox-input"
                data-pc-section="input"
                id="checked"
                type="checkbox"
                value="true"
              />
              <span
                aria-live="polite"
                class="p-hidden-accessible"
                data-pc-section="sronlyaria"
              >
                True
              </span>
              <div
                aria-checked="true"
                class="p-checkbox-box"
                data-pc-section="box"
                id="checked_box"
                role="checkbox"
                tabindex="0"
              >
                <i
                  class="pi pi-check"
                />
              </div>
            </div>
            <span>
              checked
            </span>
          </label>
        </div>
        <div
          class="om-react-ui-checkboxgroup-inner ckbg-md"
        >
          <label
            for="notChecked"
          >
            <div
              class="om-react-ui-checkboxgroup-inner-checkbox p-tristatecheckbox p-checkbox p-component p-highlight p-invalid"
              data-pc-name="tristatecheckbox"
              data-pc-section="root"
              id="notChecked"
              inputid="notChecked"
              name="notChecked"
            >
              <input
                aria-invalid="true"
                class="p-checkbox-input"
                data-pc-section="input"
                id="notChecked"
                type="checkbox"
                value="false"
              />
              <span
                aria-live="polite"
                class="p-hidden-accessible"
                data-pc-section="sronlyaria"
              >
                False
              </span>
              <div
                aria-checked="false"
                class="p-checkbox-box"
                data-pc-section="box"
                id="notChecked_box"
                role="checkbox"
                tabindex="0"
              >
                <i
                  class="pi pi-minus"
                />
              </div>
            </div>
            <span>
              Not checked
            </span>
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-checkboxgroup-wrapper"
    >
      <div
        class="om-react-ui-checkboxgroup-inner ckbg-md"
      >
        <label
          for="invalid"
        >
          <div
            class="om-react-ui-checkboxgroup-inner-checkbox p-tristatecheckbox p-checkbox p-component p-invalid"
            data-pc-name="tristatecheckbox"
            data-pc-section="root"
            id="invalid"
            inputid="invalid"
            name="invalid"
          >
            <input
              aria-invalid="true"
              class="p-checkbox-input"
              data-pc-section="input"
              id="invalid"
              type="checkbox"
            />
            <span
              aria-live="polite"
              class="p-hidden-accessible"
              data-pc-section="sronlyaria"
            >
              Not Selected
            </span>
            <div
              aria-checked="false"
              class="p-checkbox-box"
              data-pc-section="box"
              id="invalid_box"
              role="checkbox"
              tabindex="0"
            />
          </div>
          <span>
            invalid
          </span>
        </label>
      </div>
      <div
        class="om-react-ui-checkboxgroup-inner ckbg-md"
      >
        <label
          for="checked"
        >
          <div
            class="om-react-ui-checkboxgroup-inner-checkbox p-tristatecheckbox p-checkbox p-component p-highlight p-invalid"
            data-pc-name="tristatecheckbox"
            data-pc-section="root"
            id="checked"
            inputid="checked"
            name="checked"
          >
            <input
              aria-invalid="true"
              class="p-checkbox-input"
              data-pc-section="input"
              id="checked"
              type="checkbox"
              value="true"
            />
            <span
              aria-live="polite"
              class="p-hidden-accessible"
              data-pc-section="sronlyaria"
            >
              True
            </span>
            <div
              aria-checked="true"
              class="p-checkbox-box"
              data-pc-section="box"
              id="checked_box"
              role="checkbox"
              tabindex="0"
            >
              <i
                class="pi pi-check"
              />
            </div>
          </div>
          <span>
            checked
          </span>
        </label>
      </div>
      <div
        class="om-react-ui-checkboxgroup-inner ckbg-md"
      >
        <label
          for="notChecked"
        >
          <div
            class="om-react-ui-checkboxgroup-inner-checkbox p-tristatecheckbox p-checkbox p-component p-highlight p-invalid"
            data-pc-name="tristatecheckbox"
            data-pc-section="root"
            id="notChecked"
            inputid="notChecked"
            name="notChecked"
          >
            <input
              aria-invalid="true"
              class="p-checkbox-input"
              data-pc-section="input"
              id="notChecked"
              type="checkbox"
              value="false"
            />
            <span
              aria-live="polite"
              class="p-hidden-accessible"
              data-pc-section="sronlyaria"
            >
              False
            </span>
            <div
              aria-checked="false"
              class="p-checkbox-box"
              data-pc-section="box"
              id="notChecked_box"
              role="checkbox"
              tabindex="0"
            >
              <i
                class="pi pi-minus"
              />
            </div>
          </div>
          <span>
            Not checked
          </span>
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxGroup Size Variants size small renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-checkboxgroup-wrapper"
      >
        <div
          class="om-react-ui-checkboxgroup-inner ckbg-sm"
        >
          <label
            for="Cheese"
          >
            <div
              class="om-react-ui-checkboxgroup-inner-checkbox p-checkbox p-component"
              data-p-highlight="false"
              data-pc-name="checkbox"
              data-pc-section="root"
            >
              <input
                aria-invalid="false"
                class="p-checkbox-input"
                data-pc-section="input"
                id="Cheese"
                name="C"
                type="checkbox"
              />
              <div
                class="p-checkbox-box"
                data-p-highlight="false"
                data-pc-section="box"
              />
            </div>
            Cheese
          </label>
        </div>
      </div>
    </div>
    <div>
      <div
        class="om-react-ui-checkboxgroup-wrapper"
      >
        <div
          class="om-react-ui-checkboxgroup-inner ckbg-sm"
        >
          <label
            for="test"
          >
            <div
              class="om-react-ui-checkboxgroup-inner-checkbox p-checkbox p-component"
              data-p-highlight="false"
              data-pc-name="checkbox"
              data-pc-section="root"
            >
              <input
                aria-invalid="false"
                class="p-checkbox-input"
                data-pc-section="input"
                id="test"
                type="checkbox"
              />
              <div
                class="p-checkbox-box"
                data-p-highlight="false"
                data-pc-section="box"
              />
            </div>
            Test
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-checkboxgroup-wrapper"
    >
      <div
        class="om-react-ui-checkboxgroup-inner ckbg-sm"
      >
        <label
          for="test"
        >
          <div
            class="om-react-ui-checkboxgroup-inner-checkbox p-checkbox p-component"
            data-p-highlight="false"
            data-pc-name="checkbox"
            data-pc-section="root"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              id="test"
              type="checkbox"
            />
            <div
              class="p-checkbox-box"
              data-p-highlight="false"
              data-pc-section="box"
            />
          </div>
          Test
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxGroup TriState Mode multiple tristate items render correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-checkboxgroup-wrapper"
      >
        <div
          class="om-react-ui-checkboxgroup-inner ckbg-md"
        >
          <label
            for="Audi"
          >
            <div
              class="om-react-ui-checkboxgroup-inner-checkbox p-tristatecheckbox p-checkbox p-component"
              data-pc-name="tristatecheckbox"
              data-pc-section="root"
              id="Audi"
              inputid="Audi"
              name="A"
            >
              <input
                aria-invalid="false"
                class="p-checkbox-input"
                data-pc-section="input"
                id="Audi"
                type="checkbox"
              />
              <span
                aria-live="polite"
                class="p-hidden-accessible"
                data-pc-section="sronlyaria"
              >
                Not Selected
              </span>
              <div
                aria-checked="false"
                class="p-checkbox-box"
                data-pc-section="box"
                id="Audi_box"
                role="checkbox"
                tabindex="0"
              />
            </div>
            <span>
              Audi
            </span>
          </label>
        </div>
        <div
          class="om-react-ui-checkboxgroup-inner ckbg-md"
        >
          <label
            for="BWM"
          >
            <div
              class="om-react-ui-checkboxgroup-inner-checkbox p-tristatecheckbox p-checkbox p-component"
              data-pc-name="tristatecheckbox"
              data-pc-section="root"
              id="BWM"
              inputid="BWM"
              name="B"
            >
              <input
                aria-invalid="false"
                class="p-checkbox-input"
                data-pc-section="input"
                id="BWM"
                type="checkbox"
              />
              <span
                aria-live="polite"
                class="p-hidden-accessible"
                data-pc-section="sronlyaria"
              >
                Not Selected
              </span>
              <div
                aria-checked="false"
                class="p-checkbox-box"
                data-pc-section="box"
                id="BWM_box"
                role="checkbox"
                tabindex="0"
              />
            </div>
            <span>
              BWM
            </span>
          </label>
        </div>
        <div
          class="om-react-ui-checkboxgroup-inner ckbg-md"
        >
          <label
            for="Benz"
          >
            <div
              class="om-react-ui-checkboxgroup-inner-checkbox p-tristatecheckbox p-checkbox p-component p-highlight"
              data-pc-name="tristatecheckbox"
              data-pc-section="root"
              id="Benz"
              inputid="Benz"
              name="B"
            >
              <input
                aria-invalid="false"
                class="p-checkbox-input"
                data-pc-section="input"
                id="Benz"
                type="checkbox"
                value="true"
              />
              <span
                aria-live="polite"
                class="p-hidden-accessible"
                data-pc-section="sronlyaria"
              >
                True
              </span>
              <div
                aria-checked="true"
                class="p-checkbox-box"
                data-pc-section="box"
                id="Benz_box"
                role="checkbox"
                tabindex="0"
              >
                <i
                  class="pi pi-check"
                />
              </div>
            </div>
            <span>
              Mercedes-Benz
            </span>
          </label>
        </div>
        <div
          class="om-react-ui-checkboxgroup-inner ckbg-md"
        >
          <label
            for="Lexus"
          >
            <div
              class="om-react-ui-checkboxgroup-inner-checkbox p-tristatecheckbox p-checkbox p-component"
              data-pc-name="tristatecheckbox"
              data-pc-section="root"
              id="Lexus"
              inputid="Lexus"
              name="L"
            >
              <input
                aria-invalid="false"
                class="p-checkbox-input"
                data-pc-section="input"
                id="Lexus"
                type="checkbox"
              />
              <span
                aria-live="polite"
                class="p-hidden-accessible"
                data-pc-section="sronlyaria"
              >
                Not Selected
              </span>
              <div
                aria-checked="false"
                class="p-checkbox-box"
                data-pc-section="box"
                id="Lexus_box"
                role="checkbox"
                tabindex="0"
              />
            </div>
            <span>
              Lexus
            </span>
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-checkboxgroup-wrapper"
    >
      <div
        class="om-react-ui-checkboxgroup-inner ckbg-md"
      >
        <label
          for="Audi"
        >
          <div
            class="om-react-ui-checkboxgroup-inner-checkbox p-tristatecheckbox p-checkbox p-component"
            data-pc-name="tristatecheckbox"
            data-pc-section="root"
            id="Audi"
            inputid="Audi"
            name="A"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              id="Audi"
              type="checkbox"
            />
            <span
              aria-live="polite"
              class="p-hidden-accessible"
              data-pc-section="sronlyaria"
            >
              Not Selected
            </span>
            <div
              aria-checked="false"
              class="p-checkbox-box"
              data-pc-section="box"
              id="Audi_box"
              role="checkbox"
              tabindex="0"
            />
          </div>
          <span>
            Audi
          </span>
        </label>
      </div>
      <div
        class="om-react-ui-checkboxgroup-inner ckbg-md"
      >
        <label
          for="BWM"
        >
          <div
            class="om-react-ui-checkboxgroup-inner-checkbox p-tristatecheckbox p-checkbox p-component"
            data-pc-name="tristatecheckbox"
            data-pc-section="root"
            id="BWM"
            inputid="BWM"
            name="B"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              id="BWM"
              type="checkbox"
            />
            <span
              aria-live="polite"
              class="p-hidden-accessible"
              data-pc-section="sronlyaria"
            >
              Not Selected
            </span>
            <div
              aria-checked="false"
              class="p-checkbox-box"
              data-pc-section="box"
              id="BWM_box"
              role="checkbox"
              tabindex="0"
            />
          </div>
          <span>
            BWM
          </span>
        </label>
      </div>
      <div
        class="om-react-ui-checkboxgroup-inner ckbg-md"
      >
        <label
          for="Benz"
        >
          <div
            class="om-react-ui-checkboxgroup-inner-checkbox p-tristatecheckbox p-checkbox p-component p-highlight"
            data-pc-name="tristatecheckbox"
            data-pc-section="root"
            id="Benz"
            inputid="Benz"
            name="B"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              id="Benz"
              type="checkbox"
              value="true"
            />
            <span
              aria-live="polite"
              class="p-hidden-accessible"
              data-pc-section="sronlyaria"
            >
              True
            </span>
            <div
              aria-checked="true"
              class="p-checkbox-box"
              data-pc-section="box"
              id="Benz_box"
              role="checkbox"
              tabindex="0"
            >
              <i
                class="pi pi-check"
              />
            </div>
          </div>
          <span>
            Mercedes-Benz
          </span>
        </label>
      </div>
      <div
        class="om-react-ui-checkboxgroup-inner ckbg-md"
      >
        <label
          for="Lexus"
        >
          <div
            class="om-react-ui-checkboxgroup-inner-checkbox p-tristatecheckbox p-checkbox p-component"
            data-pc-name="tristatecheckbox"
            data-pc-section="root"
            id="Lexus"
            inputid="Lexus"
            name="L"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              id="Lexus"
              type="checkbox"
            />
            <span
              aria-live="polite"
              class="p-hidden-accessible"
              data-pc-section="sronlyaria"
            >
              Not Selected
            </span>
            <div
              aria-checked="false"
              class="p-checkbox-box"
              data-pc-section="box"
              id="Lexus_box"
              role="checkbox"
              tabindex="0"
            />
          </div>
          <span>
            Lexus
          </span>
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxGroup TriState Mode single tristate renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="om-react-ui-checkboxgroup-wrapper"
      >
        <div
          class="om-react-ui-checkboxgroup-inner ckbg-md"
        >
          <label
            for="Status"
          >
            <div
              class="om-react-ui-checkboxgroup-inner-checkbox p-tristatecheckbox p-checkbox p-component"
              data-pc-name="tristatecheckbox"
              data-pc-section="root"
              id="Status"
              inputid="Status"
              name="State"
            >
              <input
                aria-invalid="false"
                class="p-checkbox-input"
                data-pc-section="input"
                id="Status"
                type="checkbox"
              />
              <span
                aria-live="polite"
                class="p-hidden-accessible"
                data-pc-section="sronlyaria"
              >
                Not Selected
              </span>
              <div
                aria-checked="false"
                class="p-checkbox-box"
                data-pc-section="box"
                id="Status_box"
                role="checkbox"
                tabindex="0"
              />
            </div>
            <span>
              Change State
            </span>
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="om-react-ui-checkboxgroup-wrapper"
    >
      <div
        class="om-react-ui-checkboxgroup-inner ckbg-md"
      >
        <label
          for="Status"
        >
          <div
            class="om-react-ui-checkboxgroup-inner-checkbox p-tristatecheckbox p-checkbox p-component"
            data-pc-name="tristatecheckbox"
            data-pc-section="root"
            id="Status"
            inputid="Status"
            name="State"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              id="Status"
              type="checkbox"
            />
            <span
              aria-live="polite"
              class="p-hidden-accessible"
              data-pc-section="sronlyaria"
            >
              Not Selected
            </span>
            <div
              aria-checked="false"
              class="p-checkbox-box"
              data-pc-section="box"
              id="Status_box"
              role="checkbox"
              tabindex="0"
            />
          </div>
          <span>
            Change State
          </span>
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
